Fix double border on own comments

--- a/github-dark.css
+++ b/github-dark.css
@@ -715,9 +715,12 @@
   .markdown-format .alert:not(.warning), .full-commit.commit {
     background: linear-gradient(to bottom, #182030, #183040) !important;
   }
-  .timeline-comment-current-user, .timeline-comment-current-user .timeline-comment-header, .github-jobs-promotion p, .octotip,
+  .timeline-comment-current-user, .github-jobs-promotion p, .octotip,
   .markdown-format .alert:not(.warning), .full-commit.commit {
     border: 1px solid #246 !important;
+  }
+  .timeline-comment-current-user .timeline-comment-header {
+    border-bottom-color: #246 !important;
   }
   .timeline-comment-current-user:after, .timeline-comment-current-user:before {
     border-right-color: #246 !important;
